Updated documentation Also added a /version route
